--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
 
   <title>Styl.us</title>
 
@@ -15,17 +16,18 @@
     * {
       min-height: 50px;
     }
+
     body.debug .container,
     body.debug .container-fluid {
       outline: 2px double blue;
       outline-offset: -2px;
     }
-  
+
     body.debug .row {
       outline: 2px dashed red;
       outline-offset: -2px;
     }
-  
+
     body.debug [class*="col-"] {
       outline: 2px dotted forestgreen;
       outline-offset: -3px;
@@ -36,7 +38,7 @@
 
 
 <body>
-<!--SECTION Styl.us header-->
+  <!--SECTION Styl.us header-->
   <header class="image-background-header container-fluid flex">
     <section class="row offset-3 text-right text-light justify-content-flex-end">
       <div class="col-3 h-padding pb-5">
@@ -48,7 +50,7 @@
     </section>
   </header>
 
-<!--SECTION icon bar-->
+  <!--SECTION icon bar-->
   <main class="flex fluid text-center">
     <section class="row bg-secondary bg-success justify-content-center lg-padding">
 
@@ -77,28 +79,28 @@
       </div>
     </section>
 
-<!--SECTION subscribe-->
+    <!--SECTION subscribe-->
     <section class="row justify-content-center flex fluid md-padding">
       <div class="col-3 form-label text-center lh-1">
         <p class="fs-5 mb-0">Get news from Styl.us</p>
         <p class="fs-6 mb-0">Leave us your email</p>
         <!--NOTE how to get button and input side by side???-->
-        <div class="row justify-content-center">
+        <div class="row justify-content-center d-inline-flex">
           <input type="text" class="col-6 form-control p-0 mb-2 append order-1" aria-label="auto">
           <button class="col-6 btn btn-dark rounded btn-sm append order-2">Subscribe</button>
         </div>
       </div>
     </section>
 
-<!--SECTION image screen-->
+    <!--SECTION image screen-->
     <section class="row image-background-main fluid lg-padding">
       <div class="col-12 "></div>
     </section>
 
 
   </main>
-<!--SECTION footer black box-->
-<!--NOTE how to make icons bigger??-->
+  <!--SECTION footer black box-->
+  <!--NOTE how to make icons bigger??-->
   <footer class="bg-dark text-light fluid text-center">
     <section class="row flex p-4">
       <div class="col-6 mt-5">
@@ -115,4 +117,5 @@
   </footer>
 
 </body>
+
 </html>
